Turtle landscape improvements

--- a/public/live.html
+++ b/public/live.html
@@ -729,6 +729,425 @@
       pGeo.attributes.position.needsUpdate = true;
     }
 
+    // --- Ground (flat ocean floor, fades into ocean toward the back) ---
+    (function createGround() {
+      const W = 512, H = 256;
+      const gc = document.createElement('canvas');
+      gc.width = W; gc.height = H;
+      const gx = gc.getContext('2d');
+
+      // Linear gradient: solid sandy near camera (bottom of texture = +Z),
+      // fading to transparent further away (top of texture = -Z)
+      const sg = gx.createLinearGradient(0, 0, 0, H);
+      sg.addColorStop(0, 'rgba(50, 40, 28, 0)');       // far edge — transparent
+      sg.addColorStop(0.15, 'rgba(60, 48, 32, 0.15)');
+      sg.addColorStop(0.35, 'rgba(72, 58, 40, 0.55)');
+      sg.addColorStop(0.55, 'rgba(82, 66, 45, 0.85)');
+      sg.addColorStop(0.75, 'rgba(88, 70, 48, 0.95)');
+      sg.addColorStop(1, 'rgba(90, 72, 50, 1)');        // near edge — solid
+      gx.fillStyle = sg;
+      gx.fillRect(0, 0, W, H);
+
+      // Sand grain speckle
+      for (let i = 0; i < 1400; i++) {
+        const px = Math.random() * W, py = Math.random() * H;
+        const fade = py / H; // 0 at top (far), 1 at bottom (near)
+        if (fade < 0.2) continue;
+        const shade = 65 + Math.random() * 45;
+        const a = (0.25 + Math.random() * 0.15) * fade;
+        gx.fillStyle = `rgba(${shade+25}, ${shade+8}, ${shade-12}, ${a})`;
+        gx.fillRect(px, py, 1 + Math.random() * 2, 1 + Math.random() * 2);
+      }
+
+      // Ripple lines
+      gx.lineWidth = 1.5;
+      for (let i = 0; i < 6; i++) {
+        const y = H * 0.3 + i * (H * 0.11) + Math.random() * 10;
+        const fade = y / H;
+        gx.strokeStyle = `rgba(105, 85, 58, ${(0.08 + Math.random() * 0.06) * fade})`;
+        gx.beginPath();
+        gx.moveTo(0, y);
+        for (let px = 0; px <= W; px += 30) {
+          gx.lineTo(px, y + Math.sin(px * 0.025 + i) * 5);
+        }
+        gx.stroke();
+      }
+
+      // Pebbles
+      for (let i = 0; i < 20; i++) {
+        const px = Math.random() * W;
+        const py = H * 0.35 + Math.random() * H * 0.6;
+        const fade = py / H;
+        const r = 2 + Math.random() * 3;
+        gx.fillStyle = `rgba(${60+Math.random()*35}, ${50+Math.random()*28}, ${38+Math.random()*18}, ${0.4 * fade})`;
+        gx.beginPath();
+        gx.ellipse(px, py, r, r * 0.7, Math.random() * Math.PI, 0, Math.PI * 2);
+        gx.fill();
+      }
+
+      const groundTex = new THREE.CanvasTexture(gc);
+      groundTex.colorSpace = THREE.SRGBColorSpace;
+
+      // Wide flat plane: stretches well beyond screen edges horizontally,
+      // shallow depth so it only covers the bottom portion of the view
+      const groundGeo = new THREE.PlaneGeometry(50, 10);
+      const groundMat = new THREE.MeshStandardMaterial({
+        map: groundTex, roughness: 0.95,
+        transparent: true, depthWrite: false,
+      });
+      const ground = new THREE.Mesh(groundGeo, groundMat);
+      ground.rotation.x = -Math.PI / 2;
+      ground.position.set(0, TANK.yMin - 0.05, 3);
+      scene.add(ground);
+
+      // A few scattered rocks on the ground
+      const rockGeo = new THREE.SphereGeometry(1, 8, 6);
+      const rockMat = new THREE.MeshStandardMaterial({ color: 0x6B6058, roughness: 0.95 });
+      const rockMat2 = new THREE.MeshStandardMaterial({ color: 0x7A7060, roughness: 0.95 });
+      const rocks = [
+        { x: -6, z: 2, sx: 0.5, sy: 0.25, sz: 0.4 },
+        { x: 8, z: 0, sx: 0.7, sy: 0.3, sz: 0.5 },
+        { x: -12, z: 1, sx: 0.4, sy: 0.2, sz: 0.35 },
+        { x: 3, z: 5, sx: 0.35, sy: 0.18, sz: 0.3 },
+        { x: 12, z: 4, sx: 0.55, sy: 0.22, sz: 0.45 },
+        { x: -9, z: 6, sx: 0.3, sy: 0.15, sz: 0.25 },
+      ];
+      for (const r of rocks) {
+        const m = new THREE.Mesh(rockGeo, Math.random() > 0.5 ? rockMat : rockMat2);
+        m.scale.set(r.sx, r.sy, r.sz);
+        m.position.set(r.x, TANK.yMin + r.sy * 0.4, r.z);
+        m.rotation.y = Math.random() * Math.PI;
+        scene.add(m);
+      }
+    })();
+
+    // --- Coral ---
+    function createCoral(cx, cz, height, color, branchCount) {
+      const group = new THREE.Group();
+      group.position.set(cx, TANK.yMin, cz);
+      const mat = new THREE.MeshStandardMaterial({ color, roughness: 0.85 });
+      const lighterColor = new THREE.Color(color).lerp(new THREE.Color(0xffffff), 0.25);
+      const tipMat = new THREE.MeshStandardMaterial({ color: lighterColor, roughness: 0.8 });
+
+      // Thick base mound
+      const baseGeo = new THREE.SphereGeometry(0.25, 8, 6);
+      const base = new THREE.Mesh(baseGeo, mat);
+      base.scale.set(1, 0.4, 1);
+      base.position.y = 0.08;
+      group.add(base);
+
+      // Main trunk — tapered cylinder
+      const trunkGeo = new THREE.CylinderGeometry(0.06, 0.14, height, 8);
+      const trunk = new THREE.Mesh(trunkGeo, mat);
+      trunk.position.y = height / 2 + 0.1;
+      group.add(trunk);
+
+      // Branches with sub-branches for a tree-like coral look
+      for (let i = 0; i < branchCount; i++) {
+        const angle = (i / branchCount) * Math.PI * 2 + Math.random() * 0.6;
+        const bh = height * (0.25 + Math.random() * 0.4);
+        const by = height * (0.25 + Math.random() * 0.5);
+        const bGeo = new THREE.CylinderGeometry(0.03, 0.07, bh, 6);
+        const branch = new THREE.Mesh(bGeo, mat);
+        const bx = Math.cos(angle) * (0.15 + Math.random() * 0.1);
+        const bz = Math.sin(angle) * (0.15 + Math.random() * 0.1);
+        branch.position.set(bx, by + bh * 0.3, bz);
+        branch.rotation.z = Math.cos(angle) * (0.35 + Math.random() * 0.3);
+        branch.rotation.x = Math.sin(angle) * (0.35 + Math.random() * 0.3);
+        group.add(branch);
+
+        // Bulbous tip
+        const tipR = 0.07 + Math.random() * 0.08;
+        const tipGeo = new THREE.SphereGeometry(tipR, 8, 6);
+        const tip = new THREE.Mesh(tipGeo, tipMat);
+        tip.position.set(
+          bx + Math.cos(angle) * (bh * 0.35),
+          by + bh * 0.75,
+          bz + Math.sin(angle) * (bh * 0.35)
+        );
+        group.add(tip);
+
+        // Sub-branch
+        if (Math.random() > 0.4) {
+          const sbh = bh * 0.5;
+          const sbGeo = new THREE.CylinderGeometry(0.02, 0.04, sbh, 5);
+          const sub = new THREE.Mesh(sbGeo, mat);
+          const sa = angle + (Math.random() - 0.5) * 1.2;
+          sub.position.set(bx * 0.8, by + bh * 0.4, bz * 0.8);
+          sub.rotation.z = Math.cos(sa) * 0.6;
+          sub.rotation.x = Math.sin(sa) * 0.6;
+          group.add(sub);
+          const stGeo = new THREE.SphereGeometry(0.05, 6, 4);
+          const st = new THREE.Mesh(stGeo, tipMat);
+          st.position.set(
+            sub.position.x + Math.cos(sa) * sbh * 0.3,
+            by + bh * 0.6,
+            sub.position.z + Math.sin(sa) * sbh * 0.3
+          );
+          group.add(st);
+        }
+      }
+
+      scene.add(group);
+      return group;
+    }
+
+    // Coral placements
+    const coralData = [
+      { x: -10, z: 0, h: 1.8, c: 0xE85D75, b: 5 },
+      { x: -6, z:  5, h: 1.4, c: 0xF4A460, b: 4 },
+      { x:  9, z:  1, h: 2.0, c: 0xD94070, b: 5 },
+      { x: 11, z:  4, h: 1.5, c: 0xE8734A, b: 4 },
+      { x: -3, z:  6, h: 1.1, c: 0xC85080, b: 3 },
+      { x:  5, z: -1, h: 1.7, c: 0xF09868, b: 4 },
+      { x:  0, z:  7, h: 1.3, c: 0xDA6888, b: 3 },
+      { x: -12, z:  3, h: 1.0, c: 0xE0A070, b: 3 },
+      { x:  13, z:  0, h: 1.2, c: 0xCC5568, b: 4 },
+    ];
+    for (const cd of coralData) {
+      createCoral(cd.x, cd.z, cd.h, cd.c, cd.b);
+    }
+
+    // --- Seaweed (segmented, curving kelp blades) ---
+    const seaweedPieces = [];
+    const seaweedColors = [0x2D7A2D, 0x3A8A3A, 0x358535, 0x4A9A3A];
+
+    function createKelpBlade(bx, bz) {
+      const segments = 5 + Math.floor(Math.random() * 4);
+      const segH = 0.45 + Math.random() * 0.2;
+      const group = new THREE.Group();
+      group.position.set(bx, TANK.yMin, bz);
+
+      const color = seaweedColors[Math.floor(Math.random() * seaweedColors.length)];
+      const mat = new THREE.MeshStandardMaterial({ color, roughness: 0.75, side: THREE.DoubleSide });
+
+      let prevPivot = group;
+      const pivots = [];
+      for (let i = 0; i < segments; i++) {
+        const pivot = new THREE.Group();
+        pivot.position.y = i === 0 ? 0.1 : segH;
+
+        // Each segment is a tapered plane
+        const w = 0.18 - i * 0.012;
+        const geo = new THREE.PlaneGeometry(Math.max(w, 0.05), segH, 1, 1);
+        // Shift geometry so it pivots from the bottom
+        const posAttr = geo.attributes.position;
+        for (let v = 0; v < posAttr.count; v++) {
+          posAttr.setY(v, posAttr.getY(v) + segH / 2);
+        }
+        const mesh = new THREE.Mesh(geo, mat);
+        mesh.rotation.y = (Math.random() - 0.5) * 0.3;
+        pivot.add(mesh);
+
+        prevPivot.add(pivot);
+        pivots.push(pivot);
+        prevPivot = pivot;
+      }
+
+      scene.add(group);
+      return {
+        group,
+        pivots,
+        phase: Math.random() * Math.PI * 2,
+        freq: 0.6 + Math.random() * 0.4,
+        amp: 0.06 + Math.random() * 0.04,
+      };
+    }
+
+    const kelpPositions = [
+      { x: -7, z: 2 }, { x: 6, z: 6 }, { x: -11, z: 1 },
+      { x: 3, z: 0 }, { x: 10, z: 3 }, { x: -4, z: -1 },
+      { x: 13, z: 2 }, { x: -13, z: 5 }, { x: -1, z: 4 },
+      { x: 5, z: 7 },
+    ];
+    for (const kp of kelpPositions) {
+      const count = 2 + Math.floor(Math.random() * 3);
+      for (let i = 0; i < count; i++) {
+        seaweedPieces.push(createKelpBlade(
+          kp.x + (Math.random() - 0.5) * 0.6,
+          kp.z + (Math.random() - 0.5) * 0.6
+        ));
+      }
+    }
+
+    function updateSeaweed(time) {
+      for (const sw of seaweedPieces) {
+        for (let i = 0; i < sw.pivots.length; i++) {
+          // Each segment sways with increasing amplitude up the chain
+          const t = time * sw.freq + sw.phase + i * 0.5;
+          sw.pivots[i].rotation.z = Math.sin(t) * sw.amp * (1 + i * 0.3);
+          sw.pivots[i].rotation.x = Math.sin(t * 0.7 + 1) * sw.amp * 0.3;
+        }
+      }
+    }
+
+    // --- Fish (proper shaped tropical fish) ---
+    const FISH_COUNT = 8;
+    const fishList = [];
+
+    // Fish body: ellipsoid (flattened sphere)
+    const fishBodyGeo = new THREE.SphereGeometry(1, 10, 8);
+    // Tail: two triangle fins forming a forked tail
+    const fishTailGeo = new THREE.BufferGeometry();
+    const tv = new Float32Array([
+      0,0,0,  0.22,0.18,0,  0.08,0,0,
+      0,0,0,  0.08,0,0,     0.22,-0.18,0,
+    ]);
+    fishTailGeo.setAttribute('position', new THREE.BufferAttribute(tv, 3));
+    fishTailGeo.computeVertexNormals();
+    // Dorsal fin
+    const dorsalGeo = new THREE.BufferGeometry();
+    const dv = new Float32Array([
+      -0.08,0,0,  0.08,0,0,  0,0.14,0,
+    ]);
+    dorsalGeo.setAttribute('position', new THREE.BufferAttribute(dv, 3));
+    dorsalGeo.computeVertexNormals();
+    // Pectoral fin (small side fin)
+    const pectoralGeo = new THREE.BufferGeometry();
+    const pv = new Float32Array([
+      0,0,0,  0.12,-0.06,0.04,  0.02,-0.08,0,
+    ]);
+    pectoralGeo.setAttribute('position', new THREE.BufferAttribute(pv, 3));
+    pectoralGeo.computeVertexNormals();
+
+    const fishPalette = [
+      { body: 0x3388CC, accent: 0x55BBEE },  // blue
+      { body: 0xDD8833, accent: 0xFFBB55 },  // orange clown
+      { body: 0xCC3355, accent: 0xEE6688 },  // red
+      { body: 0x33BB88, accent: 0x66DDAA },  // teal
+      { body: 0xDDCC33, accent: 0xEEDD66 },  // yellow
+      { body: 0x8844BB, accent: 0xAA77DD },  // purple
+      { body: 0x33BBBB, accent: 0x66DDDD },  // cyan
+      { body: 0xDD6633, accent: 0xFF9966 },  // coral
+    ];
+
+    for (let i = 0; i < FISH_COUNT; i++) {
+      const pal = fishPalette[i % fishPalette.length];
+      const bodyMat = new THREE.MeshStandardMaterial({ color: pal.body, roughness: 0.4, metalness: 0.1 });
+      const accentMat = new THREE.MeshStandardMaterial({ color: pal.accent, roughness: 0.4, side: THREE.DoubleSide });
+      const finMat = new THREE.MeshStandardMaterial({ color: pal.accent, roughness: 0.5, side: THREE.DoubleSide, transparent: true, opacity: 0.8 });
+
+      const group = new THREE.Group();
+      const sz = 0.5 + Math.random() * 0.3; // vary size
+
+      // Body (flattened ellipsoid — wider than tall, longer front to back)
+      const body = new THREE.Mesh(fishBodyGeo, bodyMat);
+      body.scale.set(0.12 * sz, 0.16 * sz, 0.28 * sz);
+      group.add(body);
+
+      // Lighter belly
+      const belly = new THREE.Mesh(fishBodyGeo, accentMat);
+      belly.scale.set(0.10 * sz, 0.10 * sz, 0.22 * sz);
+      belly.position.y = -0.02 * sz;
+      group.add(belly);
+
+      // Eyes (both sides)
+      for (const side of [-1, 1]) {
+        const eye = new THREE.Mesh(eyeGeo, eyeWhiteMat);
+        eye.position.set(side * 0.06 * sz, 0.03 * sz, -0.22 * sz);
+        eye.scale.setScalar(0.6 * sz);
+        group.add(eye);
+        const pupil = new THREE.Mesh(pupilGeo, pupilMat);
+        pupil.position.set(side * 0.065 * sz, 0.03 * sz, -0.24 * sz);
+        pupil.scale.setScalar(0.6 * sz);
+        group.add(pupil);
+      }
+
+      // Tail fin (forked)
+      const tail = new THREE.Mesh(fishTailGeo, finMat);
+      tail.position.z = 0.25 * sz;
+      tail.scale.setScalar(sz);
+      tail.name = 'fishtail';
+      group.add(tail);
+
+      // Dorsal fin (top)
+      const dorsal = new THREE.Mesh(dorsalGeo, finMat);
+      dorsal.position.set(0, 0.14 * sz, 0);
+      dorsal.scale.setScalar(sz);
+      group.add(dorsal);
+
+      // Pectoral fins (side fins)
+      for (const side of [-1, 1]) {
+        const pec = new THREE.Mesh(pectoralGeo, finMat);
+        pec.position.set(side * 0.10 * sz, -0.04 * sz, -0.08 * sz);
+        pec.scale.set(side * sz, sz, sz);
+        pec.name = 'pectoral';
+        group.add(pec);
+      }
+
+      const heading = Math.random() * Math.PI * 2;
+      group.position.set(
+        (Math.random() - 0.5) * (TANK.xMax - TANK.xMin) * 0.8,
+        TANK.yMin + 1.5 + Math.random() * (TANK.yMax - TANK.yMin - 3),
+        (Math.random() - 0.5) * (TANK.zMax - TANK.zMin) * 0.8
+      );
+      group.rotation.order = 'YXZ';
+
+      scene.add(group);
+
+      fishList.push({
+        group,
+        speed: 1.5 + Math.random() * 2.5,
+        heading,
+        targetHeading: heading,
+        pitch: 0,
+        targetPitch: 0,
+        wanderTimer: Math.random() * 3,
+        phase: Math.random() * Math.PI * 2,
+      });
+    }
+
+    function updateFish(dt, time) {
+      for (const f of fishList) {
+        f.wanderTimer -= dt;
+        if (f.wanderTimer <= 0) {
+          f.wanderTimer = 2 + Math.random() * 3;
+          f.targetHeading = f.heading + (Math.random() - 0.5) * 2.0;
+          f.targetPitch = (Math.random() - 0.5) * 0.5;
+        }
+
+        const pos = f.group.position;
+        let desX = -Math.sin(f.targetHeading);
+        let desY = Math.sin(f.targetPitch);
+        let desZ = -Math.cos(f.targetHeading);
+        const margin = 3, force = 3;
+        const nudge = (d, m) => { const t = Math.max(0, 1 - d / m); return t * t * force; };
+        if (pos.x < TANK.xMin + margin) desX += nudge(pos.x - TANK.xMin, margin);
+        if (pos.x > TANK.xMax - margin) desX -= nudge(TANK.xMax - pos.x, margin);
+        if (pos.y < TANK.yMin + 1.5 + margin) desY += nudge(pos.y - TANK.yMin - 1.5, margin);
+        if (pos.y > TANK.yMax - margin) desY -= nudge(TANK.yMax - pos.y, margin);
+        if (pos.z < TANK.zMin + margin) desZ += nudge(pos.z - TANK.zMin, margin);
+        if (pos.z > TANK.zMax - margin) desZ -= nudge(TANK.zMax - pos.z, margin);
+
+        const hLen = Math.sqrt(desX * desX + desZ * desZ);
+        const rawH = Math.atan2(-desX, -desZ);
+        const rawP = Math.atan2(desY, Math.max(hLen, 0.01));
+
+        f.heading = lerpAngle(f.heading, rawH, Math.min(1, dt * 2.5));
+        f.pitch += (Math.max(-0.4, Math.min(0.4, rawP)) - f.pitch) * Math.min(1, dt * 2.5);
+
+        const cp = Math.cos(f.pitch);
+        pos.x += -Math.sin(f.heading) * cp * f.speed * dt;
+        pos.y += Math.sin(f.pitch) * f.speed * dt;
+        pos.z += -Math.cos(f.heading) * cp * f.speed * dt;
+
+        pos.x = Math.max(TANK.xMin, Math.min(TANK.xMax, pos.x));
+        pos.y = Math.max(TANK.yMin + 1, Math.min(TANK.yMax, pos.y));
+        pos.z = Math.max(TANK.zMin, Math.min(TANK.zMax, pos.z));
+
+        f.group.rotation.y = f.heading;
+        f.group.rotation.x = f.pitch;
+        f.group.rotation.z = -normalizeAngle(rawH - f.heading) * 0.3;
+
+        // Tail wag + pectoral fin flutter
+        const wag = Math.sin(time * 12 + f.phase);
+        for (const child of f.group.children) {
+          if (child.name === 'fishtail') child.rotation.y = wag * 0.45;
+          if (child.name === 'pectoral') child.rotation.z = Math.sin(time * 8 + f.phase) * 0.3;
+        }
+      }
+    }
+
     // --- Projection helper ---
     const _v = new THREE.Vector3();
     function projectToScreen(position) {
@@ -818,6 +1237,8 @@
       if (titleOpacity < 1) titleOpacity = Math.min(1, titleOpacity + dt * 0.5);
 
       for (const e of turtleMap.values()) updateTurtleMovement(e, dt, time);
+      updateFish(dt, time);
+      updateSeaweed(time);
       updateParticles(dt);
       updateLabels();
       updateTitle();
